// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Htpasswd has name 'Htpasswd' 1`] = `
<div>
  <v-form>
    <v-card-text>
      <v-text-field label="Username" name="username" type="text" rules="function (v) {
        /* istanbul ignore next */cov_1dasiliqer.f[4]++;
        cov_1dasiliqer.s[33]++;
        return (/* istanbul ignore next */(cov_1dasiliqer.b[6][0]++, !!v) || /* istanbul ignore next */(cov_1dasiliqer.b[6][1]++, 'Password is required')
        );
      }" required=""></v-text-field>
      <v-text-field label="Password" name="password" type="password" rules="function (v) {
        /* istanbul ignore next */cov_1dasiliqer.f[6]++;
        cov_1dasiliqer.s[35]++;
        return (/* istanbul ignore next */(cov_1dasiliqer.b[8][0]++, !!v) || /* istanbul ignore next */(cov_1dasiliqer.b[8][1]++, 'Email is required')
        );
      }" required=""></v-text-field>
      <v-select label="Method" items="bcrypt"></v-select>
      <v-text-field label="Salt length" type="number" id="salt"></v-text-field>
    </v-card-text>
    <v-card-actions>
      <v-btn color="primary" disabled="true">Generate</v-btn>
      <v-spacer></v-spacer>
      <v-btn>Reset form</v-btn>
    </v-card-actions>
    <v-card-text><code class="w-full p-4"></code></v-card-text>
  </v-form>
</div>
`;

exports[`Htpasswd renders as expected 1`] = `
<div>
  <v-form>
    <v-card-text>
      <v-text-field label="Username" name="username" type="text" rules="function (v) {
        /* istanbul ignore next */cov_1dasiliqer.f[4]++;
        cov_1dasiliqer.s[30]++;
        return (/* istanbul ignore next */(cov_1dasiliqer.b[5][0]++, !!v) || /* istanbul ignore next */(cov_1dasiliqer.b[5][1]++, 'Password is required')
        );
      }" required=""></v-text-field>
      <v-text-field label="Password" name="password" type="password" rules="function (v) {
        /* istanbul ignore next */cov_1dasiliqer.f[6]++;
        cov_1dasiliqer.s[32]++;
        return (/* istanbul ignore next */(cov_1dasiliqer.b[7][0]++, !!v) || /* istanbul ignore next */(cov_1dasiliqer.b[7][1]++, 'Email is required')
        );
      }" required=""></v-text-field>
      <v-select label="Method" items="bcrypt"></v-select>
      <v-text-field label="Salt length" type="number" id="salt"></v-text-field>
    </v-card-text>
    <v-card-actions>
      <v-btn id="generate-password" color="primary" disabled="true">Generate</v-btn>
      <v-spacer></v-spacer>
      <v-btn>Reset form</v-btn>
    </v-card-actions>
    <v-card-text><code class="w-full p-4"></code></v-card-text>
  </v-form>
</div>
`;
